# fingerprint-spoofing-detection

./: LICENSE  README.md  Report.md  pyproject.toml
Results/: RBF_intro.txt  SVM_RBF.txt  SVM_RBF_ResultsTable.txt  linear_SVM.txt  liner_SVM_Znorm.txt  poly_SVM_Z-false.txt  poly_SVM_Z-true.txt
src/: logreg_log.txt  logreg_log_NOz._finaltxt  logreg_log_NOznorm_linear.txt  logreg_log_NOznorm_quadratic.txt  logreg_log_znorm_final.txt  logreg_log_znorm_k10.txt  run.py  t.txt
src/Dimensionality/: main.py
src/Evaluation/: main.py
src/GMM/: main.py  models.py
src/GaussianClassifiers/: main.py
src/LDA/: main.py
src/LGA/: main.py
src/LogisticRegression/: main.py  models.py
src/MGD/: main.py
src/MLE/: main.py
src/PCA/: main.py
src/SVM/: main.py  model.py
src/Utils/: dataset_visualization.py  utils.py
src/Visualization/: main.py
